--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UniB2B.pro - Plataforma B2B com IA</title>
-    <meta name="description" content="Plataforma B2B com IA para conectar empresas, marketplace, chat seguro e matchmaking inteligente." />
-    <meta name="author" content="UniB2B" />
+    <title>Mercantia | Negócios Inteligentes</title>
+    <meta name="description" content="Potencializa conexões comerciais estratégicas com inteligência artificial avançada, garantindo segurança absoluta em cada interação." />
+    <meta name="author" content="Mercantia" />
 
-    <meta property="og:title" content="Lumio - Plataforma B2B com IA" />
-    <meta property="og:description" content="Plataforma B2B com IA para conectar empresas, marketplace, chat seguro e matchmaking inteligente." />
+    <meta property="og:title" content="Mercantia | Negócios Inteligentes" />
+    <meta property="og:description" content="Potencializa conexões comerciais estratégicas com inteligência artificial avançada, garantindo segurança absoluta em cada interação." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@unib2b" />
+    <meta name="twitter:site" content="@mercantia" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
-  <body>
+  <body class="font-sans">
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
